--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
-</body>
-</html>
+<body style="background-color: #75e6b9;"> <!--cor de fundo básica-->
+
+<!--texto de apresentação -->
+<h1>bem-vindo ao catálogo de filme</h1>
+<p>
+    aqui você encontra uma seleção dos melhores filmes de todos os tempos. Aproveite para conhecer e 
+explorar os títulos que marcaram gerações, com suas histórias envolventes e atuações memoráveis.    
+</p>
