--- a/index.html
+++ b/index.html
@@ -12,4 +12,18 @@
 <p>
     aqui você encontra uma seleção dos melhores filmes de todos os tempos. Aproveite para conhecer e 
 explorar os títulos que marcaram gerações, com suas histórias envolventes e atuações memoráveis.    
-</p>
+</p> 
+
+<!-- Tabela de Filmes -->
+ <table border="1" cellspacing="0" cellspadding="10">
+     <tr>
+         <th>Filme</th>
+         <th>Imagem</th>
+     </tr>
+     <tr>
+         <td>Filme 1</td>
+         <td><img src="imagem1.jpg" alt="Imagem do filme 1" width="100"></td>
+     </tr>
+     <tr>
+         <td>Filme 2</td>
+         <td><img src= "imagem2.jpg" alt </td>
