--- a/index.html
+++ b/index.html
@@ -22,8 +22,74 @@ explorar os títulos que marcaram gerações, com suas histórias envolventes e 
      </tr>
      <tr>
          <td>Filme 1</td>
-         <td><img src="imagem1.jpg" alt="Imagem do filme 1" width="100"></td>
+         <td><img src="imagem1.jpg" alt="Imagem do Filme 1" width="100"></td>
      </tr>
      <tr>
          <td>Filme 2</td>
-         <td><img src= "imagem2.jpg" alt </td>
+         <td><img src="imagem2.jpg" alt="Imagem do Filme 2" width="100"></td>
+     </tr>
+     <tr>
+         <td>Filme 3</td>
+         <td><img src="imagem3.jpg" alt="Imagem do Filme 3" width="100"></td>
+     </tr>
+     <tr>
+         <td>Filme 4</td>
+         <td><img src="Imagem4.jpg" alt="Imagem di Filme 4" width="100"></td>
+     </tr>
+     <tr>
+         <td>Filme 5</td>
+         <td><img src="Imagem5.jpg" alt="Imagem do Filme 5" width="100"></td>
+     </tr>
+     <tr>
+         <td>Filme 6</td>
+         <td><img src="imagem6.jpg" alt="Imagem do Filme 6" width="100"></td>
+     </tr>
+     <tr>   
+        <td>Filme 7</td>
+        <td><img src="imagem7.jpg" alt="Imagem do Filme 7" whidth="100"></td>
+     </tr>
+     <tr>
+        <td>Filme 8</td>
+        <td><img src="imagem8.jpg" alt="Imagem do Filme 8" whidth="100"></td>
+     </tr>
+     <tr>
+        <td>Filme 9</td>
+        <td><img src="imagem9.jpg" alt="Imagem do Filme 9" whidth="100"></td>
+     </tr>
+     <tr>
+        <td>Filme 10</td>
+        <td><img src="imagem10.jpg" alt="Imagem do Filme 10" whidth="100"></td>
+     </tr>
+     <tr>
+        <td>Filme 11</td>
+        <td><img src="imagem11.jpg" alt="Imagem do Filme 11" whidth="100"></td>
+     </tr>
+     <tr>
+        <td>Filme 12</td>
+        <td><img src="imagem12.jpg" alt="Imagem do Filme 12" whidth="100"></td>
+     </tr>
+     <tr>
+        <td>Filme 13</td>
+        <td><img src="imagem13.jpg" alt="Imagem do Filme 13" whidth="100"></td>
+     </tr>
+     <tr>
+        <td>Filme 14</td>
+        <td><img src="imagem14.jpg" alt="Imagem do Filme 14" whidth="100"></td>
+     </tr>
+     <tr>
+        <td>Filme 15</td>
+        <td><img src="imagem15.jpg" alt="Imagem do Filme 15" whidth="100"></td>
+     </tr>
+     <tr>
+        <td>Filme 16</td>
+        <td><img src="imagem16.jpg" alt="Imagem do Filme 16" whidth="100"></td>
+     </tr>
+ </table>
+
+     <!-- Rodapé -->
+     <footer style="margin-top: 20px">
+         <p>Aluraflix 2024 - todos os direitos reservados.</p>
+     </footer>
+
+</body>
+</html>
