--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ explorar os títulos que marcaram gerações, com suas histórias envolventes e 
          <th>Imagem</th>
      </tr>
      <tr>
-         <td>Filme 1</td>
-         <td><img src="imagem1.jpg" alt="Imagem do Filme 1" width="100"></td>
+         <td>Arceus Joia da Vida</td>
+         <td><img src="images (1).jpeg" alt="Imagem do Filme 1" width="100"></td>
      </tr>
      <tr>
          <td>Filme 2</td>
